fix: match html tag for all footer section "no links..." descriptions; align padding better so description is lined up with icon.

--- a/_sass/includes/_btn.scss
+++ b/_sass/includes/_btn.scss
@@ -44,7 +44,7 @@
   cursor: pointer;
   user-select: none;
   padding-right: $sp-3;
-  padding-top: $sp-3;
+  padding-top: $sp-2;
   transition: all .2s ease-in-out;
 
   &:hover {
